# Cider

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Compiler_Linker_Opts.cmake  LICENSE.txt  README.md  linux_build_in_usr.sh
include/: cider.h
src/: cider.c  cider.h
tests/: CMakeLists.txt  linux_run_tests.sh  tests.c  windows_run_tests.bat
